[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
arr_macro = "0.1.3"

# for sqlx and asynchronous
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.15", features = ["full"]}
